--- a/etckeeper/etckeeper.conf
+++ b/etckeeper/etckeeper.conf
@@ -20,7 +20,9 @@ DARCS_COMMIT_OPTIONS="-a"
 # can commit exiting changes to /etc automatically once per day.
 # To enable the systemd timer, run: systemctl enable etckeeper.timer
 # The cron job is enabled by default; to disable it, uncomment this next line.
+##greg
 #AVOID_DAILY_AUTOCOMMITS=1
+AVOID_DAILY_AUTOCOMMITS=1
 
 # Uncomment the following to avoid special file warning
 # (the option is enabled automatically for daily autocommits regardless).
@@ -29,7 +31,9 @@ DARCS_COMMIT_OPTIONS="-a"
 # Uncomment to avoid etckeeper committing existing changes to 
 # /etc before installation. It will cancel the installation,
 # so you can commit the changes by hand.
+##greg
 #AVOID_COMMIT_BEFORE_INSTALL=1
+AVOID_COMMIT_BEFORE_INSTALL=1
 
 # The high-level package manager that's being used.
 # (apt, pacman, pacman-g2, yum, dnf, zypper etc)
@@ -42,4 +46,4 @@ LOWLEVEL_PACKAGE_MANAGER=rpm
 # To push each commit to a remote, put the name of the remote here.
 # (eg, "origin" for git). Space-separated lists of multiple remotes
 # also work (eg, "origin gitlab github" for git).
-PUSH_REMOTE=""
+PUSH_REMOTE="origin"
