--- a/texlive/web2c/updmap.cfg
+++ b/texlive/web2c/updmap.cfg
@@ -111,3 +111,497 @@ Map dvips35.map
 Map mathpple.map
 Map pdftex35.map
 Map ps2pk35.map
+Map accanthis.map
+Map OrnementsADF.map
+Map ArrowsADF.map
+Map BulletsADF.map
+Map Alegreya.map
+MixedMap allrunes.map
+MixedMap cmextra.map
+MixedMap cm.map
+MixedMap cyrillic.map
+Map euler.map
+MixedMap latxfont.map
+MixedMap symbols.map
+Map AnonymousPro.map
+Map uaq.map
+Map antt-cs.map
+Map antt-ec.map
+Map antt-el.map
+Map antt-ex.map
+Map antt-exp.map
+Map antt-greek.map
+Map antt.map
+Map antt-mi.map
+Map antt-qx.map
+Map antt-rm.map
+Map antt-sy.map
+Map antt-t2a.map
+Map antt-t2b.map
+Map antt-t2c.map
+Map antt-t5.map
+Map antt-texnansi.map
+Map antt-ts1.map
+Map antt-wncy.map
+Map arabi.map
+MixedMap arabtex.map
+Map syriac.map
+Map aramaic.map
+Map archaicprw.map
+Map cypriot.map
+Map etruscan.map
+Map fut10.map
+Map greek4cbc.map
+Map greek6cbc.map
+Map hieroglf.map
+Map linearb.map
+Map nabatean.map
+Map oands.map
+Map oldprsn.map
+Map phoenician.map
+Map protosem.map
+Map sarabian.map
+Map ugarite.map
+Map arev.map
+MixedMap arss.map
+MixedMap artm.map
+Map bkaiu.map
+Map bsmiu.map
+Map gbsnu.map
+Map gkaiu.map
+Map ascii.map
+Map aspectratio.map
+Map augie.map
+Map auncial.map
+Map aurical.map
+Map uag.map
+Map baskervaldx.map
+Map ybv.map
+MixedMap bbold.map
+Map belleek.map
+Map bera.map
+Map ybd.map
+Map bguq.map
+Map sqrcaps.map
+Map ubk.map
+Map boondox.map
+Map pbsi.map
+Map burmese.map
+Map cabin.map
+Map caladea.map
+Map calligra.map
+Map cantarell.map
+Map carlito.map
+Map cmin.map
+MixedMap cbgreek-full.map
+Map ccicons.map
+MixedMap ccpl.map
+Map clm.map
+Map chemarrow.map
+Map Chivo.map
+Map cinzel.map
+Map cjhebrew.map
+Map ClearSans.map
+MixedMap cmtext-bsr-interpolated.map
+Map cmcyr.map
+Map cmexb.map
+Map cm-lgc.map
+MixedMap cmll.map
+MixedMap cm-super-t1.map
+MixedMap cm-super-t2a.map
+MixedMap cm-super-t2b.map
+MixedMap cm-super-t2c.map
+MixedMap cm-super-ts1.map
+MixedMap cm-super-x2.map
+Map cmu.map
+Map Cochineal.map
+Map comfortaa.map
+Map ComicNeueAngular.map
+Map ComicNeue.map
+Map contnav.map
+Map CountriesOfEurope.map
+Map ucr.map
+Map crimson.map
+Map cs-a35-nodownload.map
+Map cs-a35-urwdownload.map
+Map cs-charter.map
+Map csfonts.map
+Map cyklop-cs.map
+Map cyklop-ec.map
+Map cyklop-l7x.map
+Map cyklop-ly1.map
+Map cyklop.map
+Map cyklop-qx.map
+Map cyklop-t5.map
+Map dad.map
+Map dante.map
+Map dejavu-truetype.map
+Map dejavu-type1.map
+Map dictsym.map
+Map dstroke.map
+Map dozenal.map
+Map drm.map
+Map droid.map
+Map dummy-space.map
+Map dutchcal.map
+Map EBGaramond.map
+Map EBGaramond-Maths.map
+Map yes.map
+Map epigrafica.map
+Map epiolmec.map
+Map erewhon.map
+MixedMap esint.map
+Map esrelation.map
+Map ESSTIX.map
+Map esvect.map
+MixedMap ethiop.map
+MixedMap eurosym.map
+Map fbb.map
+Map fdsymbol.map
+Map fetamont.map
+Map fge.map
+Map figbas.map
+Map fira.map
+Map foekfont.map
+Map fonetika.map
+Map fontawesome.map
+Map nectec.map
+Map nf.map
+Map sipa.map
+Map tlwg.map
+Map fourier.map
+Map fourier-utopia-expert.map
+Map frcursive.map
+Map garuda-c90.map
+Map gentium-type1.map
+Map gfsartemisia.map
+Map gfsbaskerville.map
+Map gfsbodoni.map
+Map gfscomplutum.map
+Map gfsdidot.map
+Map gfsneohellenic.map
+Map gfsporson.map
+Map gfssolomos.map
+Map cmg.map
+Map gillius.map
+Map greektonoi.map
+Map ugq.map
+MixedMap hacm.map
+Map uhv.map
+Map Heuristica.map
+MixedMap hfbright.map
+MixedMap iby.map
+Map imfellEnglish.map
+Map zi4.map
+Map Acorn.map
+Map AnnSton.map
+Map ArtNouvc.map
+Map ArtNouv.map
+Map Carrickc.map
+Map Eichenla.map
+Map EileenBl.map
+Map Eileen.map
+Map Elzevier.map
+Map GotIn.map
+Map GoudyIn.map
+Map Kinigcap.map
+Map Konanur.map
+Map Kramer.map
+Map MorrisIn.map
+Map Nouveaud.map
+Map Romantik.map
+Map Rothdn.map
+Map RoyalIn.map
+Map Sanremo.map
+Map Starburst.map
+Map Typocaps.map
+Map Zallman.map
+Map ipaex-type1.map
+Map iwona-cs.map
+Map iwona-ec.map
+Map iwona-ex.map
+Map iwona-greek.map
+Map iwona-l7x.map
+Map iwona.map
+Map iwona-mi.map
+Map iwona-qx.map
+Map iwona-rm.map
+Map iwona-sy.map
+Map iwona-t2a.map
+Map iwona-t2b.map
+Map iwona-t2c.map
+Map iwona-t5.map
+Map iwona-texnansi.map
+Map iwona-ts1.map
+Map iwona-wncy.map
+Map jtm.map
+Map hans.map
+Map kerkis.map
+Map knitfont.map
+Map kpfonts.map
+Map kurier-cs.map
+Map kurier-ec.map
+Map kurier-ex.map
+Map kurier-greek.map
+Map kurier-l7x.map
+Map kurier.map
+Map kurier-mi.map
+Map kurier-qx.map
+Map kurier-rm.map
+Map kurier-sy.map
+Map kurier-t2a.map
+Map kurier-t2b.map
+Map kurier-t2c.map
+Map kurier-t5.map
+Map kurier-texnansi.map
+Map kurier-ts1.map
+Map kurier-wncy.map
+Map lato.map
+Map libertinegc.map
+Map libertine.map
+Map libertinust1math.map
+Map LibreBaskerville.map
+Map LibreBodoni.map
+Map LibreCaslon.map
+Map yly.map
+Map linearA.map
+Map l7x-urwvn.map
+Map lm-cs.map
+Map lm-ec.map
+Map lm-l7x.map
+Map lm.map
+Map lm-math.map
+Map lm-qx.map
+Map lm-rep-cmother.map
+Map lm-rep-cmtext-interpolated.map
+Map lm-rep-cmtext.map
+Map lm-rep-cstext.map
+MixedMap lm-rep-pltext.map
+Map lm-rep-vntext.map
+Map lm-rm.map
+Map lm-t5.map
+Map lm-texnansi.map
+Map lm-ts1.map
+Map LobsterTwo.map
+MixedMap lxfonts.map
+Map pag8y.map
+Map pbk8y.map
+Map pcr8y.map
+Map phv8y.map
+Map pnc8y.map
+Map ppl8y.map
+Map ptm8y.map
+Map pzc8y.map
+MixedMap manfnt.map
+Map marvosym.map
+Map mathabx.map
+Map mdbch.map
+Map mdgreek.map
+Map mdici.map
+Map mdpgd.map
+Map mdpus.map
+Map mdput.map
+Map mdugm.map
+Map mdsymbol.map
+Map merriweather.map
+Map troff.map
+Map troff-updmap.map
+MixedMap mflogo.map
+Map miama.map
+Map mintspirit.map
+Map MnSymbol.map
+MixedMap mongolian.map
+MixedMap musix.map
+Map mxedruli.map
+Map nanumfonts.map
+Map unc.map
+Map newpx.map
+Map newtx.map
+Map newtxsf.map
+Map newtxtt.map
+Map zmn.map
+Map nimbus15.map
+Map norasi-c90.map
+Map noto.map
+Map cherokee.map
+Map ocrb.map
+Map oinuit.map
+Map oasy.map
+Map omega.map
+Map opensans.map
+Map overlock.map
+Map upl.map
+Map paratype-truetype.map
+Map paratype-type1.map
+Map phaistos.map
+MixedMap pigpen.map
+Map PlayfairDisplay.map
+MixedMap plother.map
+MixedMap pltext.map
+Map ap-cs.map
+Map ap-ec.map
+Map ap-l7x.map
+Map ap.map
+Map ap-qx.map
+Map ap-rm.map
+Map ap-t5.map
+Map ap-texnansi.map
+Map ap-ts1.map
+Map prodint.map
+Map pcrr8rn.map
+Map charter.map
+Map fpls.map
+Map pazo.map
+Map psnfss.map
+Map utopia.map
+Map pxfonts.map
+Map pxr1.map
+Map pxr2.map
+Map pxr3.map
+Map pxr.map
+Map pxtx.map
+Map quattrocento.map
+Map Raleway.map
+Map recycle.map
+Map roboto.map
+Map yrd.map
+Map Rosario.map
+Map rsfso.map
+MixedMap rsfs.map
+Map skt.map
+Map sansmathaccent.map
+Map sansmathfonts.map
+MixedMap semaf.map
+Map SkakNew.map
+Map SourceCodePro.map
+Map SourceSansPro.map
+Map SourceSerifPro.map
+Map starfont.map
+Map icelandic.map
+Map stix.map
+MixedMap stmaryrd.map
+Map superiors.map
+MixedMap svrsymbols.map
+Map usy.map
+Map tabvar.map
+Map tempora.map
+Map tengwarscript.map
+Map qag-cs.map
+Map qag-ec.map
+Map qag-l7x.map
+Map qag.map
+Map qag-qx.map
+Map qag-rm.map
+Map qag-t5.map
+Map qag-texnansi.map
+Map qag-ts1.map
+Map qbk-cs.map
+Map qbk-ec.map
+Map qbk-l7x.map
+Map qbk.map
+Map qbk-qx.map
+Map qbk-rm.map
+Map qbk-t5.map
+Map qbk-texnansi.map
+Map qbk-ts1.map
+Map qcr-cs.map
+Map qcr-ec.map
+Map qcr-l7x.map
+Map qcr.map
+Map qcr-qx.map
+Map qcr-rm.map
+Map qcr-t5.map
+Map qcr-texnansi.map
+Map qcr-ts1.map
+Map qcs-cs.map
+Map qcs-ec.map
+Map qcs-l7x.map
+Map qcs.map
+Map qcs-qx.map
+Map qcs-rm.map
+Map qcs-t5.map
+Map qcs-texnansi.map
+Map qcs-ts1.map
+Map qhv-cs.map
+Map qhv-ec.map
+Map qhv-l7x.map
+Map qhv.map
+Map qhv-qx.map
+Map qhv-rm.map
+Map qhv-t5.map
+Map qhv-texnansi.map
+Map qhv-ts1.map
+Map qpl-cs.map
+Map qpl-ec.map
+Map qpl-l7x.map
+Map qpl.map
+Map qpl-qx.map
+Map qpl-rm.map
+Map qpl-t5.map
+Map qpl-texnansi.map
+Map qpl-ts1.map
+Map qtm-cs.map
+Map qtm-ec.map
+Map qtm-l7x.map
+Map qtm.map
+Map qtm-qx.map
+Map qtm-rm.map
+Map qtm-t5.map
+Map qtm-texnansi.map
+Map qtm-ts1.map
+Map qzc-cs.map
+Map qzc-ec.map
+Map qzc-l7x.map
+Map qzc.map
+Map qzc-qx.map
+Map qzc-rm.map
+Map qzc-t5.map
+Map qzc-texnansi.map
+Map qzc-ts1.map
+Map tfrupee.map
+Map utm.map
+MixedMap tipa.map
+MixedMap trajan.map
+Map gptimes.map
+Map txfonts.map
+Map txr1.map
+Map txr2.map
+Map txr3.map
+Map txr.map
+Map umj.map
+Map universalis.map
+Map builtin35.map
+Map download35.map
+Map ps2pk.map
+Map psfonts.map
+Map psfonts_pk.map
+Map psfonts_t1.map
+MixedMap dvng.map
+Map yv2.map
+Map yvo.map
+Map yv3.map
+Map yv1.map
+Map yvt.map
+Map arevvn.map
+Map chartervn.map
+Map cmbrightvn.map
+Map concretevn.map
+Map grotesqvn.map
+Map txttvn.map
+Map urwvn.map
+MixedMap vnrother.map
+MixedMap vnrtext.map
+Map vntopia.map
+Map dgj.map
+Map dmj.map
+Map mc2j.map
+Map mcj.map
+Map mr2j.map
+Map mrj.map
+MixedMap wasy.map
+Map XCharter.map
+MixedMap xypic.map
+Map yfrak.map
+MixedMap yhmath.map
+Map uzc.map
+Map uzd.map
