--- a/php.d/10-opcache.ini
+++ b/php.d/10-opcache.ini
@@ -1,3 +1,31 @@
+; greg, following https://docs.moodle.org/33/en/OPcache
+; commented out options same as fedora package
+; zend_extension=opcache.so
+
+[opcache]
+; opcache.enable = 1
+; opcache.memory_consumption = 128
+; greg fedora package had 4000
+opcache.max_accelerated_files = 8000
+opcache.revalidate_freq = 60
+
+; Required for Moodle
+opcache.use_cwd = 1
+opcache.validate_timestamps = 1
+opcache.save_comments = 1
+opcache.enable_file_override = 0
+
+; If something does not work in Moodle
+;opcache.revalidate_path = 1 ; May fix problems with include paths
+;opcache.mmap_base = 0x20000000 ; (Windows only) fix OPcache crashes with event id 487
+
+; Experimental for Moodle 2.6 and later
+;opcache.fast_shutdown = 1
+;opcache.enable_cli = 1 ; Speeds up CLI cron
+;opcache.load_comments = 0 ; May lower memory use, might not be compatible with add-ons and other apps.
+
+; end of moodle config
+
 ; Enable Zend OPcache extension module
 zend_extension=opcache.so
 
@@ -15,7 +43,10 @@ opcache.interned_strings_buffer=8
 
 ; The maximum number of keys (scripts) in the OPcache hash table.
 ; Only numbers between 200 and 100000 are allowed.
-opcache.max_accelerated_files=4000
+;
+; greg
+; moodle is 8000
+; opcache.max_accelerated_files=4000
 
 ; The maximum percentage of "wasted" memory until a restart is scheduled.
 ;opcache.max_wasted_percentage=5
