--- a/systemd/system/vncserver@drbean.service
+++ b/systemd/system/vncserver@drbean.service
@@ -34,15 +34,17 @@ Description=Remote desktop service (VNC)
 After=syslog.target network.target
 
 [Service]
-Type=simple
+Type=forking
 User=%i
-PAMName=login
+# PAMName=login
 Environment=HOME=/home/%i
-Environment=XDGSESSIONTYPE=x11
+# Environment=XDG_SESSION_TYPE=x11
 
 # Clean any existing files in /tmp/.X11-unix environment
-ExecStartPre=/bin/sh -c '/usr/bin/vncserver -kill :2 > /dev/null 2>&1 || :'
-ExecStart=/usr/bin/vncserver :2 -geometry 1000x687 -alwaysshared -localhost -fg
+PIDFile=/home/%i/%H2.pid
+# ExecStartPre=/usr/bin/vncserver -kill :2
+ExecStart=/usr/bin/vncserver :2 -geometry 1000x687
+# -alwaysshared -localhost -fg
 ExecStop=/usr/bin/vncserver -kill :2
 
 [Install]
