--- a/systemd/system/unoconv.service
+++ b/systemd/system/unoconv.service
@@ -6,7 +6,7 @@ After=network.target remote-fs.target nss-lookup.target
 
 [Service]
 Type=simple
-Environment="UNO_PATH=/usr/lib/libreoffice/program/soffice.bin"
+Environment="UNO_PATH=/usr/lib64/libreoffice/program/soffice"
 ExecStart=/usr/bin/unoconv --listener
 
 [Install]
