primary_hostname=sac.nuu.edu.tw.uname_not_sufficient

--- a/exim/exim.conf
+++ b/exim/exim.conf
@@ -48,6 +48,8 @@
 # the right thing and you need not set anything explicitly.
 
 # primary_hostname =
+# greg, relay not permitted unless set
+primary_hostname = sac.nuu.edu.tw
 
 
 # The next three settings create two lists of domains and one list of hosts.
