committing changes in /etc after dnf run
Package changes:
-0:abrt-2.10.3-1.fc26.x86_64
-0:abrt-addon-ccpp-2.10.3-1.fc26.x86_64
-0:abrt-addon-coredump-helper-2.10.3-1.fc26.x86_64
-0:abrt-addon-kerneloops-2.10.3-1.fc26.x86_64
-0:abrt-addon-pstoreoops-2.10.3-1.fc26.x86_64
-0:abrt-addon-python3-2.10.3-1.fc26.x86_64
-0:abrt-addon-vmcore-2.10.3-1.fc26.x86_64
-0:abrt-addon-xorg-2.10.3-1.fc26.x86_64
-0:abrt-cli-2.10.3-1.fc26.x86_64
-0:abrt-dbus-2.10.3-1.fc26.x86_64
-0:abrt-desktop-2.10.3-1.fc26.x86_64
-0:abrt-gui-2.10.3-1.fc26.x86_64
-0:abrt-gui-libs-2.10.3-1.fc26.x86_64
+0:abrt-2.10.3-3.fc26.x86_64
+0:abrt-addon-ccpp-2.10.3-3.fc26.x86_64
+0:abrt-addon-coredump-helper-2.10.3-3.fc26.x86_64
+0:abrt-addon-kerneloops-2.10.3-3.fc26.x86_64
+0:abrt-addon-pstoreoops-2.10.3-3.fc26.x86_64
+0:abrt-addon-python3-2.10.3-3.fc26.x86_64
+0:abrt-addon-vmcore-2.10.3-3.fc26.x86_64
+0:abrt-addon-xorg-2.10.3-3.fc26.x86_64
+0:abrt-cli-2.10.3-3.fc26.x86_64
+0:abrt-dbus-2.10.3-3.fc26.x86_64
+0:abrt-desktop-2.10.3-3.fc26.x86_64
+0:abrt-gui-2.10.3-3.fc26.x86_64
+0:abrt-gui-libs-2.10.3-3.fc26.x86_64
-0:abrt-libs-2.10.3-1.fc26.x86_64
-0:abrt-plugin-bodhi-2.10.3-1.fc26.x86_64
-0:abrt-python3-2.10.3-1.fc26.x86_64
-0:abrt-retrace-client-2.10.3-1.fc26.x86_64
-0:abrt-tui-2.10.3-1.fc26.x86_64
+0:abrt-libs-2.10.3-3.fc26.x86_64
+0:abrt-plugin-bodhi-2.10.3-3.fc26.x86_64
+0:abrt-python3-2.10.3-3.fc26.x86_64
+0:abrt-retrace-client-2.10.3-3.fc26.x86_64
+0:abrt-tui-2.10.3-3.fc26.x86_64
-0:audit-2.7.7-1.fc26.x86_64
-0:audit-libs-2.7.7-1.fc26.x86_64
-0:audit-libs-python3-2.7.7-1.fc26.x86_64
+0:audit-2.7.8-1.fc26.x86_64
+0:audit-libs-2.7.8-1.fc26.x86_64
+0:audit-libs-python3-2.7.8-1.fc26.x86_64
-0:blivet-gui-runtime-2.1.6-1.fc26.noarch
+0:blivet-gui-runtime-2.1.7-1.fc26.noarch
-0:boost-date-time-1.63.0-7.fc26.x86_64
-0:boost-filesystem-1.63.0-7.fc26.x86_64
-0:boost-iostreams-1.63.0-7.fc26.x86_64
-0:boost-random-1.63.0-7.fc26.x86_64
-0:boost-system-1.63.0-7.fc26.x86_64
-0:boost-thread-1.63.0-7.fc26.x86_64
+0:boost-dat

--- a/setroubleshoot/setroubleshoot.conf
+++ b/setroubleshoot/setroubleshoot.conf
@@ -88,11 +88,11 @@ recipients_filepath = /var/lib/setroubleshoot/email_alert_recipients
 pid_file = /var/run/setroubleshootd.pid
 
 # project_url: URL of project website
-project_url = https://fedorahosted.org/setroubleshoot
+project_url = https://pagure.io/setroubleshoot
 
 [help]
 # help_url: URL to user help information
-help_url = https://fedorahosted.org/setroubleshoot/wiki/SETroubleShoot%20User%20FAQ
+help_url = https://pagure.io/docs/setroubleshoot/
 
 # bug_report_url: URL used to report bugs
 bug_report_url = http://bugzilla.redhat.com/bugzilla/enter_bug.cgi
