--- a/audit/auditd.conf
+++ b/audit/auditd.conf
@@ -19,6 +19,7 @@ name_format = NONE
 max_log_file_action = ROTATE
 space_left = 75
 space_left_action = SYSLOG
+verify_email = yes
 action_mail_acct = root
 admin_space_left = 50
 admin_space_left_action = SUSPEND
