dkim_domain,selector_private_key,strict

--- a/exim/exim.conf
+++ b/exim/exim.conf
@@ -844,7 +844,10 @@ remote_smtp:
 
 # greg http://www.exim.org/exim-html-current/doc/html/spec_html/ch-support_for_dkim_domainkeys_identified_mail.html
 
-#  dkim_domain = sac.nuu.edu.tw
+# dkim_domain = sac.nuu.edu.tw
+# dkim_selector = mta
+# dkim_private_key = /etc/pki/tls/private/exim.pem
+# # dkim_strict = true
 
 # This transport is used for delivering messages over SMTP using the
 # "message submission" port (RFC4409).
