committing changes in /etc after dnf run
Package changes:
-0:aajohan-comfortaa-fonts-2.004-7.fc26.noarch
-0:aalib-libs-1.4.0-0.30.rc5.fc26.x86_64
-0:abattis-cantarell-fonts-0.0.25-2.fc26.noarch
-0:abrt-2.10.3-3.fc26.x86_64
-0:abrt-addon-ccpp-2.10.3-3.fc26.x86_64
-0:abrt-addon-coredump-helper-2.10.3-3.fc26.x86_64
-0:abrt-addon-kerneloops-2.10.3-3.fc26.x86_64
-0:abrt-addon-pstoreoops-2.10.3-3.fc26.x86_64
-0:abrt-addon-python3-2.10.3-3.fc26.x86_64
-0:abrt-addon-vmcore-2.10.3-3.fc26.x86_64
-0:abrt-addon-xorg-2.10.3-3.fc26.x86_64
-0:abrt-cli-2.10.3-3.fc26.x86_64
-0:abrt-dbus-2.10.3-3.fc26.x86_64
-0:abrt-desktop-2.10.3-3.fc26.x86_64
-0:abrt-gui-2.10.3-3.fc26.x86_64
-0:abrt-gui-libs-2.10.3-3.fc26.x86_64
-0:abrt-java-connector-1.1.0-11.fc26.x86_64
-0:abrt-libs-2.10.3-3.fc26.x86_64
-0:abrt-plugin-bodhi-2.10.3-3.fc26.x86_64
-0:abrt-python3-2.10.3-3.fc26.x86_64
-0:abrt-retrace-client-2.10.3-3.fc26.x86_64
-0:abrt-tui-2.10.3-3.fc26.x86_64
-0:accountsservice-0.6.42-2.fc26.x86_64
-0:accountsservice-libs-0.6.42-2.fc26.x86_64
-0:ack-2.18-1.fc26.noarch
-0:acl-2.2.52-15.fc26.x86_64
-0:adcli-0.8.0-3.fc26.x86_64
-0:adobe-source-han-sans-cn-fonts-1.004-3.fc26.noarch
-0:adobe-source-han-sans-tw-fonts-1.004-4.fc26.noarch
-0:adwaita-cursor-theme-3.24.0-2.fc26.noarch
-0:adwaita-gtk2-theme-3.22.3-2.fc26.x86_64
-0:adwaita-icon-theme-3.24.0-2.fc26.noarch
-0:adwaita-qt4-1.0-1.fc26.x86_64
-0:adwaita-qt5-1.0-1.fc26.x86_64
-0:alex-3.2.1-1.fc26.x86_64
-0:alsa-lib-1.1.4.1-1.fc26.x86_64
-0:alsa-plugins-pulseaudio-1.1.4-1.fc26.x86_64
-0:alsa-ucm-1.1.4.1-1.fc26.x86_64
-0:alsa-utils-1.1.4-1.fc26.x86_64
-0:anaconda-26.21.12-1.fc26.x86_64
-0:anaconda-core-26.21.12-1.fc26.x86_64
-0:anaconda-gui-26.21.12-1.fc26.x86_64
-0:anaconda-tui-26.21.12-1.fc26.x86_64
-0:anaconda-user-help-26.1-5.fc26.noarch
-0:anaconda-widgets-26.21.12-1.fc26.x86_64
-0:appstream-data-26-15.fc26.noarch
-0:apr-1.6.2-1.fc26.x86_64
-0:apr-util-1.5.4-5.fc26.x86_64
-0:argyllcms-1.9.2-2.fc26.x86_64
-0:atk-2.24.0-1.fc26.x86_64
-0:atkmm-2.24.2-

--- a/logrotate.conf
+++ b/logrotate.conf
@@ -19,6 +19,7 @@ include /etc/logrotate.d
 
 # no packages own wtmp and btmp -- we'll rotate them here
 /var/log/wtmp {
+    missingok
     monthly
     create 0664 root utmp
     minsize 1M
