--- a/pulse/daemon.conf
+++ b/pulse/daemon.conf
@@ -51,7 +51,9 @@
 ; log-backtrace = 0
 
 ; resample-method = speex-float-1
+; avoid-resampling = false
 ; enable-remixing = yes
+; remixing-use-all-sink-channels = yes
 ; enable-lfe-remixing = no
 ; lfe-crossover-freq = 0
 
