--- a/audit/auditd.conf
+++ b/audit/auditd.conf
@@ -26,7 +26,7 @@ admin_space_left_action = SUSPEND
 disk_full_action = SUSPEND
 disk_error_action = SUSPEND
 use_libwrap = yes
-##tcp_listen_port = 
+##tcp_listen_port = 60
 tcp_listen_queue = 5
 tcp_max_per_addr = 1
 ##tcp_client_ports = 1024-65535
