--- a/xdg/autostart/pulseaudio.desktop
+++ b/xdg/autostart/pulseaudio.desktop
@@ -16,6 +16,7 @@ Name[gl]=Sistema de son PulseAudio
 Name[gu]=PulseAudio સાઉન્ડ સિસ્ટમ
 Name[he]=מערכת הקול PulseAudio
 Name[hi]=पल्सऑडियो ध्वनि तंत्र
+Name[hr]=PulseAudio zvučni sustav
 Name[hu]=PulseAudio hangrendszer
 Name[id]=Sistem Suara PulseAudio
 Name[it]=Sistema sonoro PulseAudio
@@ -26,6 +27,7 @@ Name[lt]=PulseAudio garso sistema
 Name[ml]=PulseAudio സൌണ്ട് സിസ്റ്റം
 Name[mr]=PulseAudio आवाज प्रणाली
 Name[nl]=PulseAudio geluidssysteem
+Name[nn]=PulseAudio lydsystem
 Name[oc]=Sistèma de son PulseAudio
 Name[or]=PulseAudio ଧ୍ୱନି ତନ୍ତ୍ର
 Name[pa]=ਪਲਸਆਡੀਓ ਸਾਊਂਡ ਸਿਸਟਮ
@@ -59,6 +61,7 @@ Comment[gl]=Iniciar o Sistema de son PulseAudio
 Comment[gu]=PulseAudio સાઉન્ડ સિસ્ટમને શરૂ કરો
 Comment[he]=התחל את מערכת הקול PulseAudio
 Comment[hi]=पल्सऑडियो ध्वनि तंत्र प्रारंभ करें
+Comment[hr]=Pokreni PulseAudio zvučni sustav
 Comment[hu]=A PulseAudio hangrendszer elindítása
 Comment[id]=Memulai Sistem Suara PulseAudio
 Comment[it]=Avvia il sistema sonoro PulseAudio
@@ -69,6 +72,7 @@ Comment[lt]=Paleisti PulseAudio garso sistemą
 Comment[ml]=PulseAudio സൌണ്ട് സിസ്റ്റം ആരംഭിക്കുക
 Comment[mr]=PulseAudio आवाज प्रणाली सुरू करा
 Comment[nl]=Start het PulseAudio geluidssysteem
+Comment[nn]=Start PulseAudio-lydsystemet
 Comment[oc]=Aviar lo sistèma de son PulseAudio
 Comment[or]=PulseAudio ଧ୍ୱନି ତନ୍ତ୍ରକୁ ଆରମ୍ଭ କରନ୍ତୁ
 Comment[pa]=ਪਲਸਆਡੀਓ ਸਾਊਂਡ ਸਿਸਟਮ ਚਲਾਓ
