--- a/abrt/abrt-action-save-package-data.conf
+++ b/abrt/abrt-action-save-package-data.conf
@@ -10,7 +10,7 @@
 # Product Signing (GPG) Keys:
 # https://access.redhat.com/security/team/key
 #
-OpenGPGCheck = no
+OpenGPGCheck = yes
 
 # Blacklisted packages
 #
