committing changes in /etc after dnf run
Package changes:
-0:ack-2.18-1.fc26.noarch
+0:ack-2.22-1.fc26.noarch
-0:appstream-data-26-16.fc26.noarch
+0:appstream-data-26-17.fc26.noarch
-0:audit-2.8.1-1.fc26.x86_64
-0:audit-libs-2.8.1-1.fc26.x86_64
-0:audit-libs-python3-2.8.1-1.fc26.x86_64
+0:audit-2.8.2-1.fc26.x86_64
+0:audit-libs-2.8.2-1.fc26.x86_64
+0:audit-libs-python3-2.8.2-1.fc26.x86_64
-0:babl-0.1.36-1.fc26.x86_64
+0:babl-0.1.38-1.fc26.x86_64
-0:certbot-0.19.0-1.fc26.noarch
+0:certbot-0.20.0-1.fc26.noarch
-0:createrepo_c-0.10.0-9.fc26.x86_64
-0:createrepo_c-libs-0.10.0-9.fc26.x86_64
+0:createrepo_c-0.10.0-15.fc26.x86_64
+0:createrepo_c-libs-0.10.0-15.fc26.x86_64
-0:dracut-046-3.1.fc26.x86_64
-0:dracut-config-rescue-046-3.1.fc26.x86_64
-0:dracut-live-046-3.1.fc26.x86_64
-0:dracut-network-046-3.1.fc26.x86_64
+0:dracut-046-8.git20180105.fc26.x86_64
+0:dracut-config-rescue-046-8.git20180105.fc26.x86_64
+0:dracut-live-046-8.git20180105.fc26.x86_64
+0:dracut-network-046-8.git20180105.fc26.x86_64
-0:duplicity-0.7.15-1.fc26.x86_64
+0:duplicity-0.7.16-1.fc26.x86_64
-0:evince-3.24.2-1.fc26.x86_64
-0:evince-djvu-3.24.2-1.fc26.x86_64
-0:evince-libs-3.24.2-1.fc26.x86_64
-0:evince-nautilus-3.24.2-1.fc26.x86_64
+0:evince-3.24.2-2.fc26.x86_64
+0:evince-djvu-3.24.2-2.fc26.x86_64
+0:evince-libs-3.24.2-2.fc26.x86_64
+0:evince-nautilus-3.24.2-2.fc26.x86_64
-0:fedora-repos-26-1.noarch
+0:fedora-repos-26-2.noarch
-0:ffmpeg-libs-3.3.5-1.fc26.x86_64
+0:ffmpeg-libs-3.3.6-1.fc26.x86_64
-0:firefox-57.0.1-1.fc26.x86_64
+0:firefox-58.0-4.fc26.x86_64
-0:flatpak-0.10.1-1.fc26.x86_64
-0:flatpak-libs-0.10.1-1.fc26.x86_64
+0:flatpak-0.10.2.1-1.fc26.x86_64
+0:flatpak-libs-0.10.2.1-1.fc26.x86_64
-0:gdouros-symbola-fonts-10.03-1.fc26.noarch
+0:gdouros-symbola-fonts-10.23-1.fc26.noarch
-0:GeoIP-GeoLite-data-2017.10-1.fc26.noarch
+0:GeoIP-GeoLite-data-2018.01-1.fc26.noarch
-0:glibc-2.25-12.fc26.x86_64
-0:glibc-all-langpacks-2.25-12.fc26.x86_64
-0:glibc-common-2.25-12.fc26.x86_64
-0:glibc-devel-2.25-12

--- a/lynx.cfg
+++ b/lynx.cfg
@@ -1,4 +1,4 @@
-# $LynxId: lynx.cfg,v 1.274 2016/11/15 09:04:25 tom Exp $
+# $LynxId: lynx.cfg,v 1.288 2017/07/11 08:45:14 tom Exp $
 # lynx.cfg file.
 # The default placement for this file is /etc/lynx.cfg
 #
@@ -6,13 +6,14 @@
 # Linux update, overwriting your changes). Instead, edit /etc/lynx-site.cfg.
 #
 # $Format: "#PRCS LYNX_VERSION \"$ProjectVersion$\""$
-#PRCS LYNX_VERSION "2.8.9dev.11"
+#PRCS LYNX_VERSION "2.8.9dev.16"
 #
 # $Format: "#PRCS LYNX_DATE \"$ProjectDate$\""$
-#PRCS LYNX_DATE "Tue, 15 Nov 2016 04:04:25 -0500"
+#PRCS LYNX_DATE "Tue, 11 Jul 2017 04:45:14 -0400"
 #
-# Definition pairs are of the form  VARIABLE:DEFINITION
-# NO spaces are allowed between the pair items.
+# Definition pairs (configuration settings) are of the form
+#	VARIABLE:DEFINITION
+# NO spaces are allowed around the colon ":" between the pair items.
 #
 #  If you do not have write access to /usr/local/lib you may change
 #  the default location of this file in the userdefs.h file and recompile,
@@ -22,6 +23,17 @@
 # Items may be commented out by putting a '#' as the FIRST char of the line
 # (Any line beginning with punctuation is ignored).  Leading blanks on each
 # line are ignored; trailing blanks may be significant depending on the option.
+
+# In most cases, a definition can be overridden by another later in the
+# file, or in an including configuration file.  You can see the effect of
+# definitions (and redefinitions) in the trace file Lynx.log by using the
+# "-trace" and "-trace-mask" options, e.g.,
+#	lynx -trace -trace-mask=8
+
+# As a documentation aid, the default values for each setting are shown
+# commented-out.  By convention, these default value comments have no space
+# after the "#", e.g.,
+#	#HTTP_PROTOCOL:1.0
 
 # An HTML'ized description of all settings (based on comments in this file,
 # with alphabetical table of settings and with table of settings by category)
@@ -50,12 +62,18 @@
 #
 #   INCLUDE:/usr/local/lib/lynx.cfg
 #           ^^^^^^^^^^^^^^^^^^^^^^^ or whatever is appropriate on your system
-# and now your own tweaks.
+# and now your own tweaks.  If you omit the directory name, e.g.,
 #
-# Starting with Lynx 2.8.2, the INCLUDE facility is yet more powerful.  You can
-# suppress all but specific settings that will be read from included files.
-# This allows sysadmins to provide users the ability to customize lynx with
-# options that normally do not affect security, such as COLOR, VIEWER, KEYMAP.
+#   INCLUDE:lynx.cfg
+#
+# then lynx first checks if it is in any of the directories listed in the
+# environment variable LYNX_CFG_PATH, then tries the directory of the default
+# config-file.
+#
+# You can also suppress all but specific settings that will be read from
+# included files.  This allows sysadmins to provide users the ability to
+# customize lynx with options that normally do not affect security, such as
+# COLOR, VIEWER, KEYMAP.
 #
 # The syntax is
 #
@@ -960,7 +978,7 @@ LOCALE_CHARSET:TRUE
 # Local execution links and scripts are by default completely disabled,
 # unless a change is made to the userdefs.h file to enable them or
 # the configure script is used with the corresponding options
-# (--enable-exec-links and --enable-exec-scripts).
+# (-enable-exec-links and -enable-exec-scripts).
 # See the Lynx source code distribution and the userdefs.h
 # file for more detail on enabling execution links and scripts.
 #
@@ -1060,8 +1078,8 @@ LOCALE_CHARSET:TRUE
 # is the same as for TRUSTED_EXEC rules (see above).  Example rules:
 #
 #	TRUSTED_LYNXCGI:file://localhost/
-# 	TRUSTED_LYNXCGI:<tab>/usr/local/etc/httpd/cgi-bin/
-# 	TRUSTED_LYNXCGI:file://localhost/<tab>/usr/local/www/cgi-bin/
+#	TRUSTED_LYNXCGI:<tab>/usr/local/etc/httpd/cgi-bin/
+#	TRUSTED_LYNXCGI:file://localhost/<tab>/usr/local/www/cgi-bin/
 #
 # VMS:
 # ====
@@ -1237,7 +1255,7 @@ TRUSTED_LYNXCGI:none
 .h2 BIBP_BIBHOST
 # BIBP_BIBHOST is the URL at which local bibp service may be found, if
 # it exists.   Defaults to http://bibhost/ for protocol conformance, but
-# may be overridden here or via --bibhost parameter.
+# may be overridden here or via -bibhost parameter.
 #BIBP_BIBHOST:http://bibhost/
 
 .h1 Interaction
@@ -1292,6 +1310,12 @@ TRUSTED_LYNXCGI:none
 # is via a PRE block with only newlines in the block.
 #
 #COLLAPSE_BR_TAGS:TRUE
+
+.h2 TRIM_BLANK_LINES
+# If TRIM_BLANK_LINES is set FALSE, Lynx will not trim trailing blank lines
+# from the document.  Also, Lynx will not collapse BR-tags onto the previous
+# line when it happens to be empty.
+#TRIM_BLANK_LINES:TRUE
 
 .h2 TAGSOUP
 # If TAGSOUP is set, Lynx uses the "Tag Soup DTD" rather than "SortaSGML".
@@ -1828,7 +1852,6 @@ TRUSTED_LYNXCGI:none
 # Added by Red Hat:
 DOWNLOADER:View with less:less %s:TRUE
 
- 
 .h1 Interaction
 
 .h2 NO_DOT_FILES
@@ -2354,7 +2377,7 @@ MINIMAL_COMMENTS:TRUE
 # ===
 #GLOBAL_MAILCAP:Lynx_Dir:mailcap
 #
-# 	Sought in user's home (Unix) or sys$login (VMS) directory.
+#	Sought in user's home (Unix) or sys$login (VMS) directory.
 #PERSONAL_MAILCAP:.mailcap
 
 .h2 PREFERRED_MEDIA_TYPES
@@ -2492,7 +2515,7 @@ MINIMAL_COMMENTS:TRUE
 #KEYMAP:SELECT_KEY:END		# Function key Select - Go to bottom of current document
 #KEYMAP:UPARROW:PREV_LINK	# Move to the previous link or page
 #KEYMAP:DNARROW:NEXT_LINK	# Move to the next link or page
-#KEYMAP:BACKTAB_KEY:FASTBACKW_LINK 	# Back Tab - Move to previous link or text area
+#KEYMAP:BACKTAB_KEY:FASTBACKW_LINK	# Back Tab - Move to previous link or text area
 #KEYMAP:^I:FASTFORW_LINK	# Tab key - Move always to next link or text area
 #KEYMAP:^:FIRST_LINK		# Move to the first link on line
 #KEYMAP:$:LAST_LINK		# Move to the last link on line
@@ -2960,7 +2983,7 @@ MINIMAL_COMMENTS:TRUE
 #   gray          brightred      brightgreen   yellow
 #   brightblue    brightmagenta  brightcyan    white
 .fi
-# or (if you have configured using --enable-default-colors with ncurses or
+# or (if you have configured using -enable-default-colors with ncurses or
 # slang), "default" may be used for foreground and background.
 #
 # Note that in most cases a white background is really "lightgray", since
@@ -3272,7 +3295,7 @@ COLOR:6:brightred:black
 # link that otherwise will have no label associated with it).  Using an empty
 # string as the value will cause lynx to behave in the old way - hidden links
 # will be handled according to other settings (mostly the parameter of
-# --hiddenlinks command-line switch).  If the value is non-empty string, hidden
+# -hiddenlinks command-line switch).  If the value is non-empty string, hidden
 # link becomes non-hidden so it won't be handled as hidden link, e.g., listed
 # among hidden links on 'l'isting page.
 #
@@ -3378,12 +3401,13 @@ COLOR:6:brightred:black
 #ENABLE_LYNXRC:BOOKMARK_FILE:ON
 #ENABLE_LYNXRC:CASE_SENSITIVE_SEARCHING:ON
 #ENABLE_LYNXRC:CHARACTER_SET:ON
+#ENABLE_LYNXRC:COLLAPSE_BR_TAGS:ON
 #ENABLE_LYNXRC:COOKIE_ACCEPT_DOMAINS:ON
 #ENABLE_LYNXRC:COOKIE_FILE:ON
 #ENABLE_LYNXRC:COOKIE_LOOSE_INVALID_DOMAINS:ON
 #ENABLE_LYNXRC:COOKIE_QUERY_INVALID_DOMAINS:ON
 #ENABLE_LYNXRC:COOKIE_REJECT_DOMAINS:ON
-#ENABLE_LYNXRC:COOKIE_STRICT_INVALID_DOMAINS:ON
+#ENABLE_LYNXRC:COOKIE_STRICT_INVALID_DOMAIN:ON
 #ENABLE_LYNXRC:DIR_LIST_STYLE:ON
 #ENABLE_LYNXRC:DISPLAY:OFF
 #ENABLE_LYNXRC:EMACS_KEYS:ON
@@ -3409,7 +3433,7 @@ COLOR:6:brightred:black
 #ENABLE_LYNXRC:PREFERRED_MEDIA_TYPES:OFF
 #ENABLE_LYNXRC:RAW_MODE:OFF
 #ENABLE_LYNXRC:RUN_ALL_EXECUTION_LINKS:ON
-#ENABLE_LYNXRC:RUN_EXECUTION_LINKS_ON_LOCAL_FILES:ON
+#ENABLE_LYNXRC:RUN_EXECUTION_LINKS_LOCAL:ON
 #ENABLE_LYNXRC:SCROLLBAR:OFF
 #ENABLE_LYNXRC:SELECT_POPUPS:ON
 #ENABLE_LYNXRC:SEND_USERAGENT:OFF
@@ -3423,7 +3447,6 @@ COLOR:6:brightred:black
 #ENABLE_LYNXRC:TAGSOUP:OFF
 #ENABLE_LYNXRC:UNDERLINE_LINKS:OFF
 #ENABLE_LYNXRC:USER_MODE:ON
-#ENABLE_LYNXRC:SEND_USERAGENT:OFF
 #ENABLE_LYNXRC:USERAGENT:OFF
 #ENABLE_LYNXRC:VERBOSE_IMAGES:ON
 #ENABLE_LYNXRC:VI_KEYS:ON
@@ -3567,7 +3590,7 @@ INCLUDE:/etc/lynx-site.cfg
 
 .h2 SSL_CLIENT_CERT_FILE
 # Set SSL_CLIENT_CERT_FILE to the file that contains a client certificate
-# (in PEM format) in case the $SSL_CLIENT_CERT_FILE environment variable is 
+# (in PEM format) in case the $SSL_CLIENT_CERT_FILE environment variable is
 # not set, e.g.,
 #
 #SSL_CLIENT_CERT_FILE:/home/qux/certs/cert.crt
@@ -3575,7 +3598,7 @@ INCLUDE:/etc/lynx-site.cfg
 
 .h2 SSL_CLIENT_KEY_FILE
 # Set SSL_CLIENT_KEY_FILE to the file that contains a client certificate
-# key (in PEM format), in case the $SSL_CLIENT_KEY_FILE environment variable 
+# key (in PEM format), in case the $SSL_CLIENT_KEY_FILE environment variable
 # is not set, e.g.,
 #
 #SSL_CLIENT_KEY_FILE:/home/qux/certs/cert.key
