--- a/hp/hplip.conf
+++ b/hp/hplip.conf
@@ -1,15 +1,15 @@
 # hplip.conf.  Generated from hplip.conf.in by configure.
 
 [hplip]
-version=3.17.10
+version=3.17.11
 
 [dirs]
 home=/usr/share/hplip
 run=/var/run
 ppd=/usr/share/ppd/HP
 ppdbase=/usr/share/ppd
-doc=/usr/share/doc/hplip-3.17.10
-html=/usr/share/doc/hplip-3.17.10
+doc=/usr/share/doc/hplip-3.17.11
+html=/usr/share/doc/hplip-3.17.11
 icon=/usr/share/applications
 cupsbackend=/usr/lib/cups/backend
 cupsfilter=/usr/lib/cups/filter
@@ -35,7 +35,7 @@ foomatic-rip-hplip-install=no
 hpcups-install=yes
 cups-drv-install=yes
 cups-ppd-install=no
-internal-tag=3.17.10
+internal-tag=3.17.11
 restricted-build=no
 ui-toolkit=qt5
 qt3=no
@@ -47,3 +47,4 @@ udev_sysfs_rules=no
 hpcups-only-build=no
 hpijs-only-build=no
 apparmor_build=no
+class-driver=no
